[project]
name = "julia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "robin-stocks>=3.4.0",
    "ruff>=0.11.11",
    "scipy>=1.13.1",
]

[project.scripts]
lia = "main:cli"
