[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "julia"
version = "0.1.0"
description = "Options Greeks and Gamma Exposure Analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Julia Options Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.8",
    "discord>=2.3.2",
    "markupsafe==3.0.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "praw>=7.8.1",
    "python-dotenv>=1.1.0",
    "robin-stocks>=3.4.0",
    "ruff>=0.11.11",
    "scipy>=1.13.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
]

[project.scripts]
lia = "julia.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
